--- a/app/src/main/res/layout/activity_fiche_restaurant.xml
+++ b/app/src/main/res/layout/activity_fiche_restaurant.xml
@@ -4,11 +4,39 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/name"
+        android:text="Leon de Bruxelles -"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Fiche Restaurant"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal" />
+        />
+
+    <TextView
+        android:id="@+id/adresse"
+        android:text="Adresse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+         />
+
+    <TextView
+        android:id="@+id/ville"
+        android:text="Ville"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        />
+
+    <TextView
+        android:id="@+id/telephone"
+        android:text="Tel : "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
