--- a/app/src/main/res/layout/activity_fiche_restaurant.xml
+++ b/app/src/main/res/layout/activity_fiche_restaurant.xml
@@ -34,6 +34,13 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <TextView
+        android:id="@+id/distance"
+        android:text="Distance : "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
