--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -10,27 +10,45 @@
     card_view:cardCornerRadius="2dp"
     card_view:contentPadding="10dp">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/textView"
-            android:text="Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_alignParentTop="true"
-            android:textColor="#000000"/>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:text="adresse"
+        <LinearLayout
+            android:id="@+id/linearL"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_below="@+id/textView"/>
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/textView"
+                android:text="Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_alignParentTop="true"
+                android:textColor="#000000"/>
+
+            <TextView
+                android:id="@+id/textView2"
+                android:text="adresse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:maxWidth="400dp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_below="@+id/textView"/>
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:id="@+id/arrow"
+            android:src="@drawable/arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
