--- a/app/src/main/res/layout/content_fiche_restaurant.xml
+++ b/app/src/main/res/layout/content_fiche_restaurant.xml
@@ -46,4 +46,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
