--- a/app/src/main/res/layout/content_fiche_restaurant.xml
+++ b/app/src/main/res/layout/content_fiche_restaurant.xml
@@ -34,9 +34,14 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <WebView
+        android:id="@+id/news"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <TextView
-        android:id="@+id/distance"
-        android:text="Distance : "
+        android:id="@+id/infos"
+        android:text="Infos : "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium" />
