--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -4,51 +4,69 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="5dp"
+    android:elevation="5dp"
     card_view:cardCornerRadius="2dp"
     card_view:contentPadding="10dp">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/linearL"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/textView"
-                android:text="Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_alignParentTop="true"
-                android:textColor="#000000"/>
+
+            <LinearLayout
+                android:id="@+id/linearL"
+                android:orientation="vertical"
+                android:layout_weight="3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/name"
+                    android:text="Name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_alignParentTop="true"
+                    android:textColor="#000000"/>
+
+                <TextView
+                    android:id="@+id/adresse"
+                    android:text="adresse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:maxWidth="400dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_below="@+id/textView"/>
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
-                android:text="adresse"
+                android:id="@+id/distance"
+                android:text="765.3 km"
+                android:textStyle="bold"
+                android:textSize="13sp"
+                android:gravity="center"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:maxWidth="400dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_below="@+id/textView"/>
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/chevronRight"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_chevron_right"/>
 
         </LinearLayout>
 
-        <ImageView
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:id="@+id/arrow"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
