--- a/app/src/main/res/layout/content_fiche_restaurant.xml
+++ b/app/src/main/res/layout/content_fiche_restaurant.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/name"
-        android:text="Leon de Bruxelles -"
+        android:text="Leon de Bruxelles - "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -46,15 +46,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:name="com.google.android.gms.maps.MapFragment"
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="300dp"/>
 
 </LinearLayout>
