--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#017b52</color>
     <color name="colorPrimaryDark">#017b52</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#c7c7c7</color>
     <color name="greenLeon">#017b52</color>
     <color name="white">#FFFFFF</color>
     <color name="myGrey">#c7c7c7</color>
