Refractor - Ajout de style/string - Interface restaurant Activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,26 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/greenLeon"
+    android:background="@color/colorPrimary"
     tools:context="com.borombo.demo.storelocatordemo.MainActivity">
 
     <ImageView
         android:id="@+id/logo"
-        android:src="@drawable/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="110dp" />
-
+        style="@style/logo"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:indeterminate="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="110dp" />
+        style="@style/progress" />
 
 </RelativeLayout>
