--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -41,12 +41,9 @@
         </android.support.v4.widget.SwipeRefreshLayout>
 
 
-
         <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
+            style="@style/navigationView"
             app:menu="@menu/drawer_menu"/>
 
     </android.support.v4.widget.DrawerLayout>
