--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -14,12 +14,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <LinearLayout
                 android:id="@+id/linearL"
                 android:orientation="vertical"
@@ -28,45 +26,22 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/name"
-                    android:text="Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_alignParentTop="true"
-                    android:textColor="#000000"/>
+                    style="@style/name"/>
 
                 <TextView
                     android:id="@+id/adresse"
-                    android:text="adresse"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:maxWidth="400dp"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:layout_below="@+id/textView"/>
-
+                    style="@style/adresse"/>
             </LinearLayout>
 
             <TextView
                 android:id="@+id/distance"
-                android:text="765.3 km"
-                android:textStyle="bold"
-                android:textSize="13sp"
-                android:gravity="center"
-                android:textColor="#000000"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                style="@style/distance"/>
 
             <ImageView
                 android:id="@+id/chevronRight"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_chevron_right"/>
-
         </LinearLayout>
-
-
     </RelativeLayout>
-
 </android.support.v7.widget.CardView>
