--- a/app/src/main/res/layout/content_restaurant.xml
+++ b/app/src/main/res/layout/content_restaurant.xml
@@ -42,7 +42,7 @@
                 <TextView
                     android:id="@+id/telephone"
                     android:text="Tel : "
-                    style="@style/Text" />
+                    style="@style/Tel" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
