--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,6 +110,9 @@
         <item name="android:textColor">#000</item>
         <item name="android:paddingLeft">5dp</item>
     </style>
+    <style name="Tel" parent="Text">
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
     <!--Style pour les titre de card-->
     <style name="Title_Card">
         <item name="android:elevation">5dp</item>
